--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 E:/guokeda/比赛/pyproject/Datawhale/data/*.csv filter=lfs diff=lfs merge=lfs -text
+E:/guokeda/比赛/pyproject/Datawhale/task2/example.html filter=lfs diff=lfs merge=lfs -text
